--- a/src/app/filmes/cadastro-filmes/cadastro-filmes.component.html
+++ b/src/app/filmes/cadastro-filmes/cadastro-filmes.component.html
@@ -1,40 +1,77 @@
 <mat-toolbar class="app-title">Cadastrar Filme</mat-toolbar>
 <div class="main-div">
-  <mat-card class="center width50" >
-      <mat-card-content>
-          <mat-form-field class="full-width">
-            <input matInput placeholder="Título">
-          </mat-form-field>
-          <mat-form-field class="full-width">
-            <input matInput placeholder="Link Foto">
-          </mat-form-field>
-          <mat-form-field class="full-width">
-              <input matInput [matDatepicker]="picker" placeholder="Data de Lançamento">
-              <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
-              <mat-datepicker #picker></mat-datepicker>
-            </mat-form-field>
-          <mat-form-field class="full-width">
-            <textarea matInput placeholder="Descrição"></textarea>
-          </mat-form-field>
-          <mat-form-field class="full-width">
-            <input matInput placeholder="Nota IMDb">
-          </mat-form-field>
-          <mat-form-field class="full-width">
-            <input matInput placeholder="Link IMDb">
-          </mat-form-field>
-          <mat-form-field class="full-width">
-            <mat-select placeholder="Gênero">
-              <mat-option value="Ação">Açao</mat-option>
-              <mat-option value="Aventura">Aventura</mat-option>
-              <mat-option value=">Ficção Científica">Ficção Científica</mat-option>
-              <mat-option value="Romance">Romance</mat-option>
-              <mat-option value="Terror">Terror</mat-option>
-            </mat-select>
-          </mat-form-field>
-        </mat-card-content>
-        <mat-card-actions>
-          <button color="accent" mat-raised-button>Salvar</button>
-          <button color="warn" mat-raised-button>Cancelar</button>
-        </mat-card-actions>
+  <mat-card class="center width50">
+    <mat-card-content>
+      <form [formGroup]="cadastro" (ngSubmited)="salve()" (ngReset)="resetForm()">
+        <mat-form-field class="full-width">
+          <input matInput
+            placeholder="Título*"
+            name="title"
+            formControlName="title">
+          <mat-error *ngIf="(cadastro.touched || cadastro.dirty) && f.title.errors?.required">Campo obrigatório</mat-error>
+          <mat-error *ngIf="(cadastro.touched || cadastro.dirty) && f.title.errors?.minLength">Campo precisa te no mínimo 2 caracteres</mat-error>
+          <mat-error *ngIf="(cadastro.touched || cadastro.dirty) && f.title.errors?.maxLength">Campo pode ter no máximo 256 caracteres</mat-error>
+        </mat-form-field>
+        <mat-form-field class="full-width">
+          <input matInput
+            placeholder="Link Foto"
+            name="imageUrl"
+            formControlName="imageUrl">
+            <mat-error *ngIf="(cadastro.touched || cadastro.dirty) && f.imageUrl.errors?.minLength">Campo precisa te no mínimo 10 caracteres</mat-error>
+        </mat-form-field>
+        <mat-form-field class="full-width">
+          <input matInput
+            readonly
+            [matDatepicker]="picker"
+            placeholder="Data de Lançamento*"
+            name="releaseDate"
+            formControlName="releaseDate"
+            (click)="piker.open">
+          <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+          <mat-datepicker #picker></mat-datepicker>
+          <mat-error *ngIf="(cadastro.touched || cadastro.dirty) && f.releaseDate.errors?.required">Campo obrigatório</mat-error>
+        </mat-form-field>
+        <mat-form-field class="full-width">
+          <textarea matInput
+            placeholder="Descrição"
+            name="description"
+            formControlName="description"></textarea>
+        </mat-form-field>
+        <mat-form-field class="full-width">
+          <input matInput
+            type="number"
+            min="0"
+            max="10"
+            step="0.1"
+            placeholder="Nota IMDb*"
+            name="imdbNote"
+            formControlName="imdbNote">
+            <mat-error *ngIf="(cadastro.touched || cadastro.dirty) && f.imdbNote.errors?.required">Campo obrigatório</mat-error>
+            <mat-error *ngIf="(cadastro.touched || cadastro.dirty) && f.imdbNote.errors?.min">Campo precisa te no mínimo o valor 0</mat-error>
+            <mat-error *ngIf="(cadastro.touched || cadastro.dirty) && f.imdbNote.errors?.max">Campo pode ter no máximo o valor 10</mat-error>
+        </mat-form-field>
+        <mat-form-field class="full-width">
+          <input matInput
+            placeholder="Link IMDb"
+            name="imdbLink"
+            formControlName="imdbLink">
+            <mat-error *ngIf="(cadastro.touched || cadastro.dirty) && f.imdbLink.errors?.minLength">Campo precisa te no mínimo 10 caracteres</mat-error>
+        </mat-form-field>
+        <mat-form-field class="full-width">
+          <mat-select placeholder="Gênero*" formControlName="gender">
+            <mat-option value="Ação">Ação</mat-option>
+            <mat-option value="Aventura">Aventura</mat-option>
+            <mat-option value=">Ficção Científica">Ficção Científica</mat-option>
+            <mat-option value="Romance">Romance</mat-option>
+            <mat-option value="Terror">Terror</mat-option>
+          </mat-select>
+          <mat-error *ngIf="(cadastro.touched || cadastro.dirty) && f.gender.errors?.required">Campo obrigatório</mat-error>
+        </mat-form-field>
+      </form>
+    </mat-card-content>
+    <mat-card-actions>
+      <button type="submit" color="accent" mat-raised-button>Salvar</button>
+      <button type="reset" color="warn" mat-raised-button>Cancelar</button>
+    </mat-card-actions>
   </mat-card>
 </div>
