--- a/src/app/filmes/cadastro-filmes/cadastro-filmes.component.html
+++ b/src/app/filmes/cadastro-filmes/cadastro-filmes.component.html
@@ -1,77 +1,45 @@
 <mat-toolbar class="app-title">Cadastrar Filme</mat-toolbar>
 <div class="main-div">
   <mat-card class="center width50">
-    <mat-card-content>
-      <form [formGroup]="cadastro" (ngSubmited)="salve()" (ngReset)="resetForm()">
-        <mat-form-field class="full-width">
-          <input matInput
-            placeholder="Título*"
-            name="title"
-            formControlName="title">
-          <mat-error *ngIf="validateField.hasErrorValidate(f.title, 'required')">Campo obrigatório</mat-error>
-          <mat-error *ngIf="validateField.hasErrorValidate(f.title, 'minLength')">Campo precisa te no mínimo 2 caracteres</mat-error>
-          <mat-error *ngIf="validateField.hasErrorValidate(f.title, 'maxLength')">Campo pode ter no máximo 256 caracteres</mat-error>
-        </mat-form-field>
-        <mat-form-field class="full-width">
-          <input matInput
-            placeholder="Link Foto"
-            name="imageUrl"
-            formControlName="imageUrl">
-            <mat-error *ngIf="validateField.hasErrorValidate(f.imageUrl, 'minLength')">Campo precisa te no mínimo 10 caracteres</mat-error>
-        </mat-form-field>
-        <mat-form-field class="full-width">
-          <input matInput
-            readonly
-            [matDatepicker]="picker"
-            placeholder="Data de Lançamento*"
-            name="releaseDate"
-            formControlName="releaseDate"
-            (click)="piker.open">
-          <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
-          <mat-datepicker #picker></mat-datepicker>
-          <mat-error *ngIf="validateField.hasErrorValidate(f.releaseDate, 'required')">Campo obrigatório</mat-error>
-        </mat-form-field>
-        <mat-form-field class="full-width">
-          <textarea matInput
-            placeholder="Descrição"
-            name="description"
-            formControlName="description"></textarea>
-        </mat-form-field>
-        <mat-form-field class="full-width">
-          <input matInput
-            type="number"
-            min="0"
-            max="10"
-            step="0.1"
-            placeholder="Nota IMDb*"
-            name="imdbNote"
-            formControlName="imdbNote">
-            <mat-error *ngIf="validateField.hasErrorValidate(f.imdbNote, 'required')">Campo obrigatório</mat-error>
-            <mat-error *ngIf="validateField.hasErrorValidate(f.imdbNote, 'min')">Campo precisa te no mínimo o valor 0</mat-error>
-            <mat-error *ngIf="validateField.hasErrorValidate(f.imdbNote, 'max')">Campo pode ter no máximo o valor 10</mat-error>
-        </mat-form-field>
-        <mat-form-field class="full-width">
-          <input matInput
-            placeholder="Link IMDb"
-            name="imdbLink"
-            formControlName="imdbLink">
-            <mat-error *ngIf="validateField.hasErrorValidate(f.imdbLink, 'minLength')">Campo precisa te no mínimo 10 caracteres</mat-error>
-        </mat-form-field>
-        <mat-form-field class="full-width">
-          <mat-select placeholder="Gênero*" formControlName="gender">
-            <mat-option value="Ação">Ação</mat-option>
-            <mat-option value="Aventura">Aventura</mat-option>
-            <mat-option value="Ficção Científica">Ficção Científica</mat-option>
-            <mat-option value="Romance">Romance</mat-option>
-            <mat-option value="Terror">Terror</mat-option>
-          </mat-select>
-          <mat-error *ngIf="validateField.hasErrorValidate(f.gender, 'required')">Campo obrigatório</mat-error>
-        </mat-form-field>
-      </form>
-    </mat-card-content>
-    <mat-card-actions>
-      <button type="submit" color="accent" mat-raised-button>Salvar</button>
-      <button type="reset" color="warn" mat-raised-button>Cancelar</button>
-    </mat-card-actions>
+    <form autocomplete="off" novalidate [formGroup]="cadastro" (ngSubmit)="salve()" (ngReset)="resetForm()">
+      <mat-card-content>
+        <dio-input-text title="Titulo*"
+          controlName="title"
+          [formGroup]="cadastro">
+        </dio-input-text>
+        <dio-input-text title="Link Foto"
+          controlName="imageUrl"
+          [formGroup]="cadastro">
+        </dio-input-text>
+        <dio-input-date title="Data de Lançamento*"
+          controlName="releaseDate"
+          [formGroup]="cadastro">
+        </dio-input-date>
+        <dio-input-textarea title="Descrição"
+          controlName="description"
+          [formGroup]="cadastro">
+        </dio-input-textarea>
+        <dio-input-number title="Nota IMDb*"
+          min="0"
+          max="10"
+          step="0.1"
+          controlName="imdbNote"
+          [formGroup]="cadastro">
+        </dio-input-number>
+        <dio-input-text title="Link IMDb"
+          controlName="imdbLink"
+          [formGroup]="cadastro">
+        </dio-input-text>
+        <dio-select title="Gênero*"
+          controlName="gender"
+          [options]="gender"
+          [formGroup]="cadastro">
+        </dio-select>
+      </mat-card-content>
+      <mat-card-actions>
+        <button type="submit" color="accent" mat-raised-button>Salvar</button>
+        <button type="reset" color="warn" mat-raised-button>Cancelar</button>
+      </mat-card-actions>
+    </form>
   </mat-card>
 </div>
