Added modal for editing or deleting the movie

--- a/src/app/filmes/listagem-filmes/listagem-filmes.component.html
+++ b/src/app/filmes/listagem-filmes/listagem-filmes.component.html
@@ -41,7 +41,7 @@
       </p>
     </mat-card-content>
     <mat-card-actions>
-      <button color="accent" (click)="open()" mat-raised-button>ABRIR</button>
+      <button color="accent" (click)="open(filme.id)" mat-raised-button>ABRIR</button>
     </mat-card-actions>
   </mat-card>
 
